# pain-radar

./: .env.example  .gitignore  docker-compose.yml
docs/: ARCHITECTURE.md  PRODUCT_SPEC.md
engine/: Dockerfile  pyproject.toml
engine/pain_radar/: db.py  main.py
engine/pain_radar/analysis/: clustering.py  conflict.py  intake.py  scoring.py  skeptic.py  verdict.py
engine/pain_radar/api/: routes.py  schemas.py
engine/pain_radar/core/: config.py  evidence_gate.py  models.py
engine/pain_radar/llm/: base.py  claude.py  openai_provider.py  prompts.py
engine/pain_radar/pipeline/: orchestrator.py  query_templates.py  relevance.py
engine/pain_radar/report/: export.py  generator.py
engine/pain_radar/sources/: base.py  reddit.py  reviews.py  snapshot.py  web_search.py
engine/tests/: test_evidence_gate.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/research/[id]/: page.tsx
web/src/components/: clarification-step.tsx  idea-form.tsx  report-view.tsx  research-progress.tsx
web/src/components/ui/: animated-collapsible.tsx  animated-counter.tsx  background-mesh.tsx  citation-chip.tsx  claim-list.tsx  cluster-card.tsx  cluster-preview-card.tsx  competitor-card.tsx  fact-carousel.tsx  glass-card.tsx  live-feed.tsx  metric-tile.tsx  radar-chart.tsx  scan-animation.tsx  score-gauge.tsx  section-header.tsx  skeptic-flag-card.tsx  stage-timeline.tsx  strength-badge.tsx  verdict-badge.tsx
web/src/hooks/: use-research.ts
web/src/lib/: api-client.ts  types.ts
